DESCRIPTION TRANSLATION :Scream:

--- a/src/main/resources/assets/shuker-view/lang/en_us.json
+++ b/src/main/resources/assets/shuker-view/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "text.autoconfig.shulker-view.title": "Shulker View",
   "text.autoconfig.shulker-view.option.compact": "Compact Layout",
-  "text.autoconfig.shulker-view.option.background": "Background Color"
+  "text.autoconfig.shulker-view.option.background": "Background Color",
+  "modmenu.descriptionTranslation.iris": "Mod that improves shulker management."
 }
