--- a/src/main/resources/assets/shuker-view/lang/ru_ru.json
+++ b/src/main/resources/assets/shuker-view/lang/ru_ru.json
@@ -1,5 +1,6 @@
 {
   "text.autoconfig.shulker-view.title": "Shulker View",
   "text.autoconfig.shulker-view.option.compact": "Компактный Режим",
-  "text.autoconfig.shulker-view.option.background": "Цвет Заднего Фона"
+  "text.autoconfig.shulker-view.option.background": "Цвет Заднего Фона",
+  "modmenu.descriptionTranslation.iris": "Мод который улучшает управление шалкерами."
 }
