тихо спиздил и ушел называется нашел

--- a/src/main/resources/assets/shuker-view/lang/en_us.json
+++ b/src/main/resources/assets/shuker-view/lang/en_us.json
@@ -2,5 +2,5 @@
   "text.autoconfig.shulker-view.title": "Shulker View",
   "text.autoconfig.shulker-view.option.compact": "Compact Layout",
   "text.autoconfig.shulker-view.option.background": "Background Color",
-  "modmenu.descriptionTranslation.iris": "Mod that improves shulker management."
+  "modmenu.descriptionTranslation.shulker-view": "Mod that improves shulker management."
 }
