--- a/src/main/resources/assets/shuker-view/lang/ru_ru.json
+++ b/src/main/resources/assets/shuker-view/lang/ru_ru.json
@@ -2,5 +2,5 @@
   "text.autoconfig.shulker-view.title": "Shulker View",
   "text.autoconfig.shulker-view.option.compact": "Компактный Режим",
   "text.autoconfig.shulker-view.option.background": "Цвет Заднего Фона",
-  "modmenu.descriptionTranslation.iris": "Мод который улучшает управление шалкерами."
+  "modmenu.descriptionTranslation.shulker-view": "Мод который улучшает управление шалкерами."
 }
