--- a/src/main/resources/assets/shuker-view/lang/en_us.json
+++ b/src/main/resources/assets/shuker-view/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "text.autoconfig.shulker-view.title": "Shulker View",
   "text.autoconfig.shulker-view.option.compact": "Compact Layout",
+  "text.autoconfig.shulker-view.option.bothSides": "Use Both Sides",
   "text.autoconfig.shulker-view.option.background": "Background Color",
   "modmenu.descriptionTranslation.shulker-view": "Mod that improves shulker management."
 }
